# lib/books_api_web/views/book_view.ex
@@ -1,12 +1,15 @@
 defmodule BooksApiWeb.BookView do
   use BooksApiWeb, :view
-  alias BooksApiWeb.{BookView, UserView, ReviewView}
+  alias BooksApiWeb.{BookView, UserView, ReviewView, PageView}
 
   @fields [:id, :title, :isbn, :description, :price, :authors, :rating]
   @relationships [read_by: UserView, reviews: ReviewView]
 
-  def render("index.json", %{books: books}) do
-    %{data: render_many(books, BookView, "book.json")}
+  def render("index.json", %{books: books, page: page}) do
+    %{
+      data: render_many(books, BookView, "book.json"),
+      pagination: render_one(page, PageView, "page.json")
+    }
   end
 
   def render("show.json", %{book: book}) do
